fixed layout problem on low resolution display

--- a/styles.css
+++ b/styles.css
@@ -138,3 +138,34 @@ body {
   height: 200px;
   margin-top: 40px;
 }
+
+@media only screen and (max-width: 1440px) {
+  .text-block {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 700px;
+    padding: 0px 10px 10px 10px;
+    border-radius: 5px;
+    background-color: #0D1726;
+    margin: 7px;
+  }
+  .row {
+    width: auto;
+    flex-flow: row;
+    justify-content: space-around;
+  }
+  .trophic {
+    background-color: #0D1726;
+    width: 300px;
+  }
+  .aquaculture {
+    background-color: #19304F;
+  }
+  .graph-overlay {
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    left: 10px;
+  }
+}
